--- a/app/src/main/res/layout/activity_selectedquestion.xml
+++ b/app/src/main/res/layout/activity_selectedquestion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,105 +8,96 @@
     tools:context=".SelectedQuestionActivity"
     tools:layout_editor_absoluteY="81dp">
 
+    <ImageView
+        android:id="@+id/imageViewSelectedQuestionUserImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
+        android:scaleType="fitCenter" />
+
     <TextView
         android:id="@+id/textViewSelectedQuestionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/imageViewSelectedQuestionUserImage"
+        android:layout_marginEnd="54dp"
         android:text="Title of your ****** question"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewSelectedQuestionDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Description"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="15sp"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSelectedQuestionTitle" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewSelectedQuestionAskedBy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_alignBottom="@+id/imageViewSelectedQuestionUserImage"
+        android:layout_alignStart="@+id/textViewSelectedQuestionTitle"
         android:text="By Mr."
         android:textColor="@android:color/darker_gray"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSelectedQuestionDescription" />
+        android:textSize="14sp" />
 
-    <ImageButton
-        android:id="@+id/buttonSelectedQuestionReply"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_reply_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/buttonSelectedQuestionVote"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTimeLimitGiven" />
-
-    <ImageButton
-        android:id="@+id/buttonSelectedQuestionVote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="92dp"
-        android:layout_marginTop="8dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_thumb_up_black_24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSelectedQuestionAskedBy" />
-
-    <View
-        android:id="@+id/divider"
+    <TextView
+        android:id="@+id/textViewSelectedQuestionDescription"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_above="@+id/senderContainer"
-        android:layout_gravity="bottom"
-        android:background="@color/divider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSelectedQuestionReply" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewListOfAnswers"
-        android:layout_width="344dp"
-        android:layout_height="371dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="80dp"
+        android:text="Description"
+        android:textColor="#000000"
+        android:textSize="17sp" />
 
     <TextView
         android:id="@+id/textViewTimeLimitGiven"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageViewSelectedQuestionUserImage"
+        android:layout_alignParentEnd="true"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
         android:text="Time Limit"
         android:textColor="@android:color/holo_red_light"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@+id/textViewSelectedQuestionAskedBy"
-        app:layout_constraintHorizontal_bias="0.032"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSelectedQuestionDescription" />
+        android:textSize="12sp" />
 
-</android.support.constraint.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/buttonSelectedQuestionReply"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/imageViewSelectedQuestionUserImage"
+        android:layout_below="@+id/textViewSelectedQuestionDescription"
+        android:layout_marginTop="25dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_reply_black_24dp" />
+
+    <ImageButton
+        android:id="@+id/buttonSelectedQuestionVote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/buttonSelectedQuestionReply"
+        android:layout_marginStart="100dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_thumb_up_black_24dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewListOfAnswers"
+        android:layout_width="match_parent"
+        android:layout_height="353dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/textViewQuestionLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/buttonSelectedQuestionReply"
+        android:layout_marginStart="130dp" />
+
+
+</RelativeLayout>
