--- a/app/src/main/res/layout/item_one.xml
+++ b/app/src/main/res/layout/item_one.xml
@@ -1,42 +1,15 @@
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-    <ImageView
-        android:id="@+id/truiton_image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/truiton_image"
-        android:layout_centerHorizontal="true"
-        android:text="Fragment 1"
-        android:textSize="30sp"/>
-
-</RelativeLayout>-->
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
-
-    <android.support.v7.widget.GridLayout
+ <android.support.v7.widget.GridLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageButton
             android:id="@+id/five"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_height="100dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="5dp"
             android:scaleType="fitCenter"
@@ -56,8 +29,8 @@
         <ImageButton
 
             android:id="@+id/six"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="50dp"
             android:layout_marginTop="5dp"
             android:background="?attr/selectableItemBackgroundBorderless"
@@ -78,8 +51,8 @@
         <ImageButton
 
             android:id="@+id/seven"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="5dp"
@@ -99,8 +72,8 @@
 
         <ImageButton
             android:id="@+id/eight"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="50dp"
             android:layout_marginTop="5dp"
             android:background="?attr/selectableItemBackgroundBorderless"
@@ -122,8 +95,8 @@
         <ImageButton
             android:background="?attr/selectableItemBackgroundBorderless"
             android:id="@+id/one"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="5dp"
             android:scaleType="fitCenter"
@@ -143,8 +116,8 @@
         <ImageButton
             android:background="?attr/selectableItemBackgroundBorderless"
             android:id="@+id/two"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="50dp"
             android:layout_marginTop="5dp"
             android:scaleType="fitCenter"
@@ -164,8 +137,8 @@
         <ImageButton
             android:id="@+id/three"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="5dp"
             android:scaleType="fitCenter"
@@ -185,8 +158,8 @@
         <ImageButton
             android:id="@+id/four"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="50dp"
             android:layout_marginTop="5dp"
             android:scaleType="fitCenter"
@@ -203,5 +176,3 @@
             app:layout_column="2"
             app:layout_row="3" />
     </android.support.v7.widget.GridLayout>
-
-</ScrollView>
