--- a/app/src/main/res/layout/item_two.xml
+++ b/app/src/main/res/layout/item_two.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,11 +12,8 @@
 
         <WebView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/webviewSearchResult"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -24,14 +22,13 @@
 
         <EditText
             android:id="@+id/editTextSearchQuery"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
-            android:hint="@android:string/search_go"
-            android:inputType="textPersonName"
+            android:hint="To Crawl"
+            android:inputType="text"
+            app:layout_constraintBottom_toTopOf="@+id/webviewSearchResult"
             app:layout_constraintEnd_toStartOf="@+id/buttonSearchButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
-            android:text="Search"
+            android:text="Crawl"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
