--- a/app/src/main/res/layout/itemthree.xml
+++ b/app/src/main/res/layout/itemthree.xml
@@ -1,85 +1,77 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/backg"
+    android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="39dp"
+        android:layout_marginTop="16dp"
+        android:text="User Profile"
+        android:textSize="30sp" />
+
+    <ImageView
+        android:id="@+id/imageViewLoggedInUser"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:scaleType="fitCenter" />
+
+    <TextView
+        android:id="@+id/textViewLoggedInUser"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:ems="10"
+        android:text="Logged in User"
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="39dp"
-            android:layout_marginTop="16dp"
-            android:text="User Profile"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/imageViewLoggedInUser"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textViewLoggedInEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:ems="10"
+        android:text="Email"
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/textViewLoggedInUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:text="Logged in User"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/textViewLoggedInEmail"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewLoggedInUser" />
+    <Button
 
-        <TextView
-            android:id="@+id/textViewLoggedInEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="33dp"
-            android:text="Email"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonGoToMessages"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewLoggedInUser" />
+        android:id="@+id/buttonGoToMessages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
 
-        <Button
-            android:id="@+id/buttonGoToMessages"
-            android:layout_width="142dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="31dp"
-            android:text="Go to Messages"
-            app:layout_constraintBottom_toTopOf="@+id/buttonLogut"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewLoggedInEmail" />
+        android:layout_marginTop="5dp"
+        android:text="Go to Messages" />
 
-        <Button
-            android:id="@+id/buttonLogut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
-            android:layout_marginStart="27dp"
-            android:text="Logout"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/buttonGoToMessages"
-            app:layout_constraintTop_toBottomOf="@+id/buttonGoToMessages" />
+    <Button
+        android:id="@+id/buttonLogut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="5dp"
+        android:text="Logout" />
 
-        <ImageView
-            android:id="@+id/imageViewLoggedInUser"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginBottom="32dp"
-            android:scaleType="fitCenter"
-            app:layout_constraintBottom_toTopOf="@+id/textViewLoggedInUser"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    </android.support.constraint.ConstraintLayout>
-
-</RelativeLayout>
+</LinearLayout>
