--- a/app/src/main/res/layout/rowforanswerslist.xml
+++ b/app/src/main/res/layout/rowforanswerslist.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/display_cardview1"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true"
-    android:layout_margin="3dp"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="2dp">
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
+    card_view:cardCornerRadius="4dp">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/parentLayoutAnswer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#efefef"
-        android:padding="5dp">
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
+
+        <ImageView
+            android:id="@+id/imageViewAnswerPostedUser"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="10dp"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:id="@+id/textViewAnswerTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginRight="5dp"
+            android:layout_toRightOf="@+id/imageViewAnswerPostedUser"
+            android:lines="2"
             android:text="AnswerTitle"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
 
         <TextView
             android:id="@+id/textViewAnswerPostedBy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/textViewQuestionTitle"
-            android:layout_marginEnd="15dp"
+            android:layout_below="@+id/textViewAnswerTitle"
+            android:layout_toRightOf="@+id/imageViewAnswerPostedUser"
             android:text="DateTime"
-            android:textColor="@android:color/darker_gray"
-            android:textStyle="italic" />
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </RelativeLayout>
 
