--- a/app/src/main/res/layout/rowforquestionslist.xml
+++ b/app/src/main/res/layout/rowforquestionslist.xml
@@ -2,14 +2,14 @@
 
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/display_cardview"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true"
-    android:layout_margin="3dp"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="2dp">
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
+    card_view:cardCornerRadius="4dp">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,27 +17,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="#e4e4e4"
-        android:padding="5dp">
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
+
+        <ImageView
+            android:id="@+id/imageViewQuestionPostedUser"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="10dp"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:id="@+id/textViewQuestionTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
-            android:text="AnswerTitle" />
+            android:layout_marginRight="5dp"
+            android:layout_toRightOf="@+id/imageViewQuestionPostedUser"
+            android:text="AnswerTitle"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
             android:id="@+id/textViewQuestionPostedDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_below="@+id/textViewQuestionTitle"
-            android:layout_marginEnd="15dp"
-            android:text="DateTime" />
+            android:layout_toRightOf="@+id/imageViewQuestionPostedUser"
+            android:text="DateTime"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
